# xarray-compare

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  readme.doctree
.doctrees/_apidoc/: modules.doctree  xarray_compare.doctree
.github/workflows/: test.yml
_apidoc/: modules.html  xarray_compare.html
_modules/: index.html
_modules/xarray_compare/: compare.html  utils.html
_sources/: readme.rst.txt
_sources/_apidoc/: modules.rst.txt  xarray_compare.rst.txt
docs/: conf.py  index.rst
etc/: builddocs  configure
tests/: test_compare.py  test_package.py  test_utils.py
xarray_compare/: __init__.py  compare.py  utils.py
