[tool.poetry]
name = "xarray-compare"
version = "0.1.0"
description = "xarray extension for data comparison"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/xarray-compare"
documentation = "https://astropenguin.github.io/xarray-compare"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18"
xarray = "^0.15"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8"
ipython = "^7.17"
pytest = "^6.0"
sphinx = "^3.2"
pydata-sphinx-theme = "^0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
